tra-package/main/default/objects/Deployment_Analysis_Item__c/Deployment_Analysis_Item__c.object-meta.xml
<CustomObject>
    <label>Deployment Analysis Item</label>
    <nameField>
        <displayFormat>DAI-{0000}</displayFormat>
        <label>Deployment Analysis Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Analysis Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>