tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText
  >Finding category (ex: BulkRisk, Reliability, Maintainability)</inlineHelpText>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>