tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Depth_Level__c.field-meta.xml
<CustomField>
    <fullName>Depth_Level__c</fullName>
    <label>Depth Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>