tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Highlight_Line__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Line__c</fullName>
    <description>the line we highlight inside the snippet</description>
    <label>Highlight Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>