tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>show line in table</description>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>