tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Matched_Rules__c.field-meta.xml
<CustomField>
    <fullName>Matched_Rules__c</fullName>
    <label>Matched Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>