tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description
  >full message shown in modal and short message used in table</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>