tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>what to do instead</description>
    <label>Recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>