tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Risk_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reasons__c</fullName>
    <label>Risk Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>