tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Rule_Label__c.field-meta.xml
<CustomField>
    <fullName>Rule_Label__c</fullName>
    <description>Show readable rule name in table/modal</description>
    <label>Rule Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>