tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run</label>
    <referenceTo>Deployment_Analysis_Run__c</referenceTo>
    <relationshipLabel>Deployment Analysis Items</relationshipLabel>
    <relationshipName>Deployment_Analysis_Items</relationshipName>
    <type>Lookup</type>
</CustomField>