tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Severity_Sort__c.field-meta.xml
<CustomField>
    <fullName>Severity_Sort__c</fullName>
    <description
  >Sort High/Medium/Low easily (High=3, Medium=2, Low=1)</description>
    <label>Severity Sort</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>