tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Snippet_End_Line__c.field-meta.xml
<CustomField>
    <fullName>Snippet_End_Line__c</fullName>
    <label>Snippet End Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>