tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Snippet_Text__c.field-meta.xml
<CustomField>
    <fullName>Snippet_Text__c</fullName>
    <description>snippet text shown in modal</description>
    <label>Snippet Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>