tra-package/main/default/objects/Deployment_Analysis_Item__c/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <label>Trigger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>